--- a/.github/workflows/copilot-sync.yml
+++ b/.github/workflows/copilot-sync.yml
@@ -16,14 +16,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y yq
 
-      - name: Verify hierarchy file exists
-        run: |
-          if [ ! -f .copilot/copilot-hierarchy.yml ]; then
-            echo "copilot-hierarchy.yml missing, skipping"
-            exit 0
-          fi
-
       - name: Load hierarchy
+        if: ${{ exists('.copilot/copilot-hierarchy.yml') }}
         run: |
           ORG=$(yq '.org' .copilot/copilot-hierarchy.yml)
           DIV=$(yq '.division' .copilot/copilot-hierarchy.yml)
@@ -33,8 +27,9 @@ jobs:
           echo "DIV=$DIV" >> $GITHUB_ENV
           echo "SUBDIV=$SUBDIV" >> $GITHUB_ENV
           echo "APP=$APP" >> $GITHUB_ENV
-          
+
       - name: Checkout subdivision instructions
+        if: ${{ exists('.copilot/copilot-hierarchy.yml') }}
         continue-on-error: true
         uses: actions/checkout@v4
         with:
@@ -42,12 +37,14 @@ jobs:
           path: subdivision-instructions
 
       - name: Merge Copilot Instructions
+        if: ${{ exists('.copilot/copilot-hierarchy.yml') }}
         run: |
           mkdir -p .copilot
           cp -Rn subdivision-instructions/.copilot/* .copilot/ || echo "No subdivision-level instructions to merge"
           echo "copilot merge completed"
 
       - name: Commit if changed
+        if: ${{ exists('.copilot/copilot-hierarchy.yml') }}
         run: |
           git config user.name "copilot-bot"
           git config user.email "copilot-bot@yourcompany.com"
