--- a/.copilot/copilot-hierarchy.yml
+++ b/.copilot/copilot-hierarchy.yml
@@ -1,4 +1,4 @@
 org: janardhannallapati
 division: DIV_A
-subdivision: SUB_DIV_A
-application: APP_A
+subdivision: SUB_DIV_A-copilot-instructions
+application: APP_A_REPO
