--- a/.copilot/copilot-hierarchy.yml
+++ b/.copilot/copilot-hierarchy.yml
@@ -1,4 +1,4 @@
-org: janardhannallapati
-division: DIV_A
+org: ""
+division: ""
 subdivision: SUB_DIV_A-copilot-instructions
 application: APP_A_REPO
